[package]
name                   = "hydra-evaluator"
version.workspace      = true
edition                = "2024"
license                = "GPL-3.0"
rust-version.workspace = true

[dependencies]
anyhow.workspace       = true
clap                   = { workspace = true, features = [ "derive" ] }
fs-err.workspace       = true
futures.workspace      = true
sqlx                   = { workspace = true, features = [ "runtime-tokio", "tls-rustls-ring-webpki", "postgres" ] }
tokio                  = { workspace = true, features = [ "full" ] }
tokio-stream.workspace = true
tracing.workspace      = true

db            = { path = "../crates/db" }
hydra-tracing = { path = "../crates/tracing" }
