[package]
name                   = "hydra-queue-runner"
version.workspace      = true
edition                = "2024"
license                = "GPL-3.0"
rust-version.workspace = true

[dependencies]
sd-notify.workspace = true
tracing.workspace   = true

arc-swap.workspace    = true
hashbrown             = { workspace = true, features = [ "serde" ] }
parking_lot.workspace = true
secrecy               = { workspace = true, features = [ "serde" ] }
serde                 = { workspace = true, features = [ "derive" ] }
serde_json.workspace  = true
smallvec              = { workspace = true, features = [ "serde" ] }
toml.workspace        = true

anyhow.workspace       = true
atomic_float.workspace = true
backon.workspace       = true
clap                   = { workspace = true, features = [ "derive", "env" ] }
fs-err                 = { workspace = true, features = [ "tokio" ] }
thiserror.workspace    = true
uuid                   = { workspace = true, features = [ "v4", "serde" ] }

byte-unit.workspace    = true
futures.workspace      = true
futures-util.workspace = true
tokio                  = { workspace = true, features = [ "full" ] }

h2.workspace               = true
listenfd.workspace         = true
prost.workspace            = true
tokio-stream.workspace     = true
tonic                      = { workspace = true, features = [ "zstd", "tls-webpki-roots" ] }
tonic-health.workspace     = true
tonic-prost.workspace      = true
tonic-reflection.workspace = true

bytes.workspace          = true
http-body-util.workspace = true
hyper                    = { workspace = true, features = [ "full" ] }
hyper-util.workspace     = true
jiff.workspace           = true
procfs.workspace         = true
prometheus               = { workspace = true, features = [ "process" ] }
tower                    = { workspace = true, features = [ "util" ] }
tower-http               = { workspace = true, features = [ "trace" ] }

binary-cache                  = { path = "../crates/binary-cache" }
db                            = { path = "../crates/db" }
harmonia-store-core.workspace = true
hydra-tracing                 = { path = "../crates/tracing", features = [ "tonic" ] }
nix-utils                     = { path = "../crates/nix-utils" }
shared                        = { path = "../crates/shared" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true

[build-dependencies]
fs-err                      = { workspace = true }
sha2.workspace              = true
tonic-prost-build.workspace = true

[features]
otel = [ "hydra-tracing/otel" ]
