[package]
name = "db"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
rust-version.workspace = true

[dependencies]
tracing.workspace = true
anyhow.workspace = true
futures.workspace = true
hashbrown.workspace = true

serde_json.workspace = true
jiff.workspace = true

sqlx = { workspace = true, features = [
  "runtime-tokio",
  "tls-rustls-ring-webpki",
  "postgres",
] }
