[package]
name = "queue-runner"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
tracing-log = "0.2.0"
console-subscriber = { version = "0.4.1", optional = true }

sd-notify = "0.4.5"
lockfile = "0.4.0"
toml = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secrecy = { version = "0.10.3", features = ["serde"] }
ahash = "0.8.11"
arc-swap = "1.7.1"
parking_lot = "0.12.4"

thiserror = "2.0"
anyhow = "1.0.98"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
atomic_float = "1.1.0"

tokio = { version = "1.34", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
byte-unit = "5.1.6"

tokio-stream = "0.1"
prost = "0.14"
tonic = { version = "0.14", features = ["zstd", "tls-ring"] }
tonic-reflection = "0.14"
tonic-prost = "0.14"
listenfd = "1"
async-stream = "0.3"
h2 = "0.4"

hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = "0.1.10"
bytes = "1"
chrono = { version = "0.4.38", default-features = false, features = [
  "clock",
  "std",
  "serde",
] }
prometheus = "0.14.0"
procfs = "0.18"

db = { path = "../crates/db" }
nix-utils = { path = "../crates/nix-utils" }
shared = { path = "../crates/shared" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[build-dependencies]
tonic-prost-build = "0.14"

[features]
tokio-console = ["console-subscriber"]
