[package]
name                   = "binary-cache"
version                = "0.1.0"
edition                = "2024"
license                = "LGPL-2.1-only"
rust-version.workspace = true

[dependencies]
bytes.workspace     = true
thiserror.workspace = true
tracing.workspace   = true
url.workspace       = true

async-compression = { workspace = true, features = [
    "tokio",
    "xz",
    "xz-parallel",
    "bzip2",
    "brotli",
    "zstd",
] }
backon.workspace = true
configparser.workspace = true
foldhash.workspace = true
fs-err = { workspace = true, features = [ "tokio" ] }
futures.workspace = true
hashbrown.workspace = true
moka.workspace = true
object_store = { workspace = true, features = [ "aws" ] }
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
smallvec.workspace = true
tokio = { workspace = true, features = [ "full" ] }
tokio-stream = { workspace = true, features = [ "io-util" ] }
tokio-util = { workspace = true, features = [ "io", "io-util" ] }

harmonia-store-core.workspace = true
harmonia-utils-hash.workspace = true
nix-utils                     = { path = "../nix-utils" }

[dev-dependencies]
hydra-tracing = { path = "../tracing" }
tempfile      = "3.23.0"
