[package]
name                   = "binary-cache"
version                = "0.1.0"
edition                = "2024"
license                = "LGPL-2.1-only"
rust-version.workspace = true

[dependencies]
bytes.workspace     = true
thiserror.workspace = true
tracing.workspace   = true
url.workspace       = true

async-compression = { workspace = true, features = [
    "tokio",
    "xz",
    "xz-parallel",
    "bzip2",
    "brotli",
    "zstd",
] }
backon.workspace = true
configparser.workspace = true
foldhash.workspace = true
fs-err = { workspace = true, features = [ "tokio" ] }
futures.workspace = true
hashbrown.workspace = true
moka.workspace = true
object_store = { workspace = true, features = [ "aws" ] }
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
smallvec.workspace = true
tokio = { workspace = true, features = [ "full" ] }
tokio-stream = { workspace = true, features = [ "io-util" ] }
tokio-util = { workspace = true, features = [ "io", "io-util" ] }

daemon-client-utils.workspace       = true
harmonia-file-core.workspace        = true
harmonia-file-nar.workspace         = true
harmonia-protocol.workspace         = true
harmonia-store-derivation.workspace = true
harmonia-store-nar-info.workspace   = true
harmonia-store-path.workspace       = true
harmonia-store-path-info.workspace  = true
harmonia-store-remote.workspace     = true
harmonia-utils-hash.workspace       = true
harmonia-utils-io.workspace         = true
harmonia-utils-signature.workspace  = true

[dev-dependencies]
eyre                    = "0.6"
hydra-tracing.workspace = true
tempfile                = "3.23.0"
